=== xdg-utils 1.x.x ====

2009-07-28 Fathi Boudra <fabo@freedesktop.org>
    * Add KDE 4 support to xdg-mime. kdetradertest was replaced by
      ktraderclient under KDE 4.

2009-07-27 Fathi Boudra <fabo@freedesktop.org>
    * Remove -u option from su. It doesn't have it.

2009-07-27 Fathi Boudra <fabo@freedesktop.org>
    * Add KDE 4 support to xdg-email (BR17268)

2009-07-26 Fathi Boudra <fabo@freedesktop.org>
    * Sleep for 50s instead of 59s to avoid to froze the seesion (BR19414)

2009-07-26 Fathi Boudra <fabo@freedesktop.org>
    * Fix a race condition in xdg-screensaver (BR19382)

2009-07-26 Fathi Boudra <fabo@freedesktop.org>
    * Fix basename usage when filename contains spaces (BR18567)

2009-07-26 Fathi Boudra <fabo@freedesktop.org>
    * Fix bashisms used in xdg-mime and xdg-screensaver (BR15827)

2008-08-11 Rex Dieter <rdieter@fedoraproject.org>
    * initial support for KDE 4
    * Add dbus commands to xdg-screensaver for KDE 4 (BR17537)

2008-01-24 Kevin Krammer <kevin.krammer@gmx.at>
    * Fixing security issue in xdg-email and xdg-open at replacing
      parameter in $BROWSER

2007-06-27 Waldo Bastian <waldo.bastian@intel.com>
    * Fix xdg-mime query filetype on XFCE (BR11383)

=== xdg-utils 1.0.2 ====

=== xdg-utils 1.0.1 ====

2006-11-03 Waldo Bastian <waldo.bastian@intel.com>
    * Fixed spurious output on stdout by xdg-desktop-menu
    * Cleaned up shell syntax for xdg-screensaver and xdg-icon-resource
      (fixes Ubuntu 6.10)

2006-10-29 Kevin Krammer <kevin.krammer@gmx.at>
    * Fixed non-ascii mailto URI handling of xdg-emial on non-UTF8 locales
      under KDE

=== xdg-utils 1.0 ====

2006-05-10 Bryce Harrington <bryce@osdl.org>
    * Created xdg-screensaver

2006-04-24 Kevin Krammer <kevin.krammer@gmx.at>
    * Applied patch provided by Benedikt Meurer <benedikt.meurer@unix-ag.uni-siegen.de>
      to improve the compatability of the Makefile
    * Added --title option to xdg-file-dialog